--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,6 @@
     }
     #sidebar {
       background: #27293d;
-      color: #bbb;
       width: 220px;
       padding: 15px 10px;
       display: flex;
@@ -31,17 +30,15 @@
       margin-bottom: 10px;
       cursor: pointer;
       font-size: 16px;
-      border-radius: 12px;           /* Smoother edges */
+      border-radius: 12px;
       transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
-      box-shadow: inset 0 0 0 0 transparent;
     }
     #sidebar button.tab-btn:hover {
       background: #51587f;
       color: #fff;
-      box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.1);
     }
     #sidebar button.tab-btn.active {
-      background: #4f90ff;           /* nicer blue */
+      background: #4f90ff;
       color: white;
       box-shadow: 0 0 12px #4f90ffaa;
     }
@@ -50,19 +47,17 @@
       padding: 30px 40px;
       overflow-y: auto;
       background: #2a2a3f;
-      border-radius: 0 20px 20px 0;   /* smooth right edges */
-      box-shadow: inset 0 0 15px #00000088;
     }
     .tab-content {
       display: none;
-      animation: fadeIn 0.3s ease forwards;
     }
     .tab-content.active {
       display: block;
+      animation: fadeIn 0.3s ease forwards;
     }
     @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
     ul {
       padding-left: 20px;
@@ -77,23 +72,18 @@
       margin-top: 8px;
       padding: 8px 12px;
       width: 100%;
-      box-sizing: border-box;
       font-size: 15px;
-      border-radius: 10px;           /* smooth edges */
+      border-radius: 10px;
       border: none;
       background-color: #444d7a;
       color: #eee;
-      transition: background-color 0.3s;
-      box-shadow: inset 0 0 8px #0008;
       cursor: pointer;
     }
     select:hover, button[type="submit"]:hover {
       background-color: #5b6aab;
-      box-shadow: 0 0 8px #5b6aabaa;
     }
     button[type="submit"]:active {
       background-color: #3e4a7d;
-      box-shadow: inset 0 0 6px #222a54;
     }
     #lastUpdated {
       margin-top: 20px;
@@ -101,26 +91,24 @@
       font-size: 0.9em;
       color: #bbb;
       font-style: italic;
-      user-select: none;
     }
     h2 {
       margin-top: 0;
       color: #a0b4ff;
-      text-shadow: 0 0 6px #7397ffcc;
     }
   </style>
 </head>
 <body>
 
-  <nav id="sidebar" aria-label="Main navigation">
-    <button class="tab-btn active" data-target="generalInfo" aria-selected="true" role="tab">General Info</button>
-    <button class="tab-btn" data-target="commands" aria-selected="false" role="tab">Commands</button>
-    <button class="tab-btn" data-target="useCommands" aria-selected="false" role="tab">Use Commands</button>
-    <button class="tab-btn" data-target="logs" aria-selected="false" role="tab">Logs</button>
+  <nav id="sidebar">
+    <button class="tab-btn active" data-target="generalInfo">General Info</button>
+    <button class="tab-btn" data-target="commands">Commands</button>
+    <button class="tab-btn" data-target="useCommands">Use Commands</button>
+    <button class="tab-btn" data-target="logs">Logs</button>
   </nav>
 
   <main>
-    <section id="generalInfo" class="tab-content active" role="tabpanel" tabindex="0">
+    <section id="generalInfo" class="tab-content active">
       <h2>General Info</h2>
       <p id="memberCount">Members: Loading...</p>
       <p id="banCount">Bans: Loading...</p>
@@ -128,23 +116,16 @@
       <p id="lastUpdated">Last updated: --:--:--</p>
     </section>
 
-    <section id="commands" class="tab-content" role="tabpanel" tabindex="0">
+    <section id="commands" class="tab-content">
       <h2>Commands</h2>
       <ul id="commandsList">
         <li>Loading commands...</li>
       </ul>
     </section>
 
-    <section id="logs" class="tab-content" role="tabpanel" tabindex="0">
-      <h2>Logs</h2>
-      <ul id="logsList">
-        <li>Loading logs...</li>
-      </ul>
-    </section>
-
-    <section id="useCommands" class="tab-content" role="tabpanel" tabindex="0">
+    <section id="useCommands" class="tab-content">
       <h2>Use Commands</h2>
-      <form id="commandForm" aria-label="Use command form">
+      <form id="commandForm">
         <label for="commandSelect">Command:</label>
         <select id="commandSelect" name="command" required></select>
 
@@ -153,167 +134,150 @@
 
         <button type="submit">Execute</button>
       </form>
-      <div id="commandResult" role="alert" aria-live="assertive" style="margin-top: 10px;"></div>
+      <div id="commandResult" style="margin-top: 10px;"></div>
+    </section>
+
+    <section id="logs" class="tab-content">
+      <h2>Logs</h2>
+      <ul id="logsList">
+        <li>Loading logs...</li>
+      </ul>
     </section>
   </main>
 
   <script>
-    // Tab switching logic with ARIA
-    const tabButtons = document.querySelectorAll('#sidebar .tab-btn');
-    const tabContents = document.querySelectorAll('.tab-content');
-
-    tabButtons.forEach(btn => {
+    // Tab logic
+    document.querySelectorAll('#sidebar .tab-btn').forEach(btn => {
       btn.addEventListener('click', () => {
-        tabButtons.forEach(b => {
-          b.classList.remove('active');
-          b.setAttribute('aria-selected', 'false');
-        });
+        document.querySelectorAll('#sidebar .tab-btn').forEach(b => b.classList.remove('active'));
+        document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
         btn.classList.add('active');
-        btn.setAttribute('aria-selected', 'true');
-
-        const target = btn.dataset.target;
-        tabContents.forEach(c => {
-          c.classList.toggle('active', c.id === target);
-        });
+        document.getElementById(btn.dataset.target).classList.add('active');
       });
     });
 
-    // Update visible last updated timestamp
+    // Update time
     function updateLastUpdated() {
       const now = new Date();
-      const timeString = now.toLocaleTimeString();
-      document.getElementById('lastUpdated').textContent = `Last updated: ${timeString}`;
+      document.getElementById('lastUpdated').textContent = `Last updated: ${now.toLocaleTimeString()}`;
     }
 
-    // Fetch and display general info stats
+    // Fetch General Info
     async function fetchGeneralInfo() {
       try {
-        const memberRes = await fetch('/api/memberCount');
-        const { memberCount } = await memberRes.json();
-        document.getElementById('memberCount').textContent = `Members: ${memberCount}`;
+        const [mRes, bRes, uRes] = await Promise.all([
+          fetch('/api/memberCount').then(r => r.json()),
+          fetch('/api/banCount').then(r => r.json()),
+          fetch('/api/uptime').then(r => r.json()),
+        ]);
 
-        const banRes = await fetch('/api/banCount');
-        const { banCount } = await banRes.json();
-        document.getElementById('banCount').textContent = `Bans: ${banCount}`;
-
-        const uptimeRes = await fetch('/api/uptime');
-        const { uptimeMs } = await uptimeRes.json();
-        const uptimeSec = Math.floor(uptimeMs / 1000);
-        const hours = Math.floor(uptimeSec / 3600);
-        const minutes = Math.floor((uptimeSec % 3600) / 60);
-        const seconds = uptimeSec % 60;
-        document.getElementById('uptimeDisplay').textContent = `Uptime: ${hours}h ${minutes}m ${seconds}s`;
-
+        document.getElementById('memberCount').textContent = `Members: ${mRes.memberCount}`;
+        document.getElementById('banCount').textContent = `Bans: ${bRes.banCount}`;
+        const sec = Math.floor(mRes.uptimeMs / 1000);
+        const h = Math.floor(sec / 3600);
+        const m = Math.floor((sec % 3600) / 60);
+        const s = sec % 60;
+        document.getElementById('uptimeDisplay').textContent = `Uptime: ${h}h ${m}m ${s}s`;
         updateLastUpdated();
-      } catch (e) {
+      } catch {
         document.getElementById('memberCount').textContent = 'Failed to load member count';
         document.getElementById('banCount').textContent = 'Failed to load ban count';
         document.getElementById('uptimeDisplay').textContent = 'Failed to load uptime';
       }
     }
 
-    // Fetch and display commands
+    // Fetch Commands
     async function fetchCommands() {
       try {
         const res = await fetch('/api/commands');
-        const commands = await res.json();
+        const cmds = await res.json();
         const ul = document.getElementById('commandsList');
         ul.innerHTML = '';
-        commands.forEach(cmd => {
+        cmds.forEach(c => {
           const li = document.createElement('li');
-          li.textContent = cmd;
+          li.textContent = c;
           ul.appendChild(li);
         });
       } catch {
-        document.getElementById('commandsList').textContent = 'Failed to load commands';
+        document.getElementById('commandsList').innerHTML = '<li>Failed to load commands</li>';
       }
     }
 
-    // Fetch and display logs
+    // Fetch Logs
     async function fetchLogs() {
       try {
         const res = await fetch('/api/logs');
         const logs = await res.json();
         const ul = document.getElementById('logsList');
         ul.innerHTML = '';
-        logs.forEach(log => {
+        logs.forEach(l => {
           const li = document.createElement('li');
-          li.textContent = log;
+          li.textContent = l;
           ul.appendChild(li);
         });
-
         updateLastUpdated();
       } catch {
-        document.getElementById('logsList').textContent = 'Failed to load logs';
+        document.getElementById('logsList').innerHTML = '<li>Failed to load logs</li>';
       }
     }
 
-    // Populate commands and users for "Use Commands" form
+    // Populate Use Commands
     async function populateUseCommands() {
       try {
-        const [commandsRes, usersRes] = await Promise.all([
-          fetch('/api/commands'),
-          fetch('/api/users'),
+        const [cRes, uRes] = await Promise.all([
+          fetch('/api/commands').then(r => r.json()),
+          fetch('/api/users').then(r => r.json()),
         ]);
-        const commands = await commandsRes.json();
-        const users = await usersRes.json();
-
-        const commandSelect = document.getElementById('commandSelect');
-        commandSelect.innerHTML = '';
-        commands.forEach(cmd => {
-          const option = document.createElement('option');
-          option.value = cmd;
-          option.textContent = cmd.charAt(0).toUpperCase() + cmd.slice(1);
-          commandSelect.appendChild(option);
+        const cSel = document.getElementById('commandSelect');
+        const uSel = document.getElementById('userSelect');
+        cSel.innerHTML = '';
+        cRes.forEach(c => {
+          const o = document.createElement('option');
+          o.value = c;
+          o.textContent = c;
+          cSel.appendChild(o);
         });
-
-        const userSelect = document.getElementById('userSelect');
-        userSelect.innerHTML = '';
-        users.forEach(user => {
-          const option = document.createElement('option');
-          option.value = user.id;
-          option.textContent = user.username;
-          userSelect.appendChild(option);
+        uSel.innerHTML = '';
+        uRes.forEach(u => {
+          const o = document.createElement('option');
+          o.value = u.id;
+          o.textContent = u.username;
+          uSel.appendChild(o);
         });
       } catch {
-        const form = document.getElementById('commandForm');
-        form.innerHTML = '<p>Failed to load commands or users.</p>';
+        document.getElementById('commandForm').innerHTML = '<p>Failed to load commands or users.</p>';
       }
     }
 
-    // Handle command form submit
-    document.getElementById('commandForm').addEventListener('submit', async (e) => {
+    // Submit command
+    document.getElementById('commandForm').addEventListener('submit', async e => {
       e.preventDefault();
       const command = document.getElementById('commandSelect').value;
       const userId = document.getElementById('userSelect').value;
-      const resultDiv = document.getElementById('commandResult');
-      resultDiv.textContent = 'Sending command...';
-
+      const result = document.getElementById('commandResult');
+      result.textContent = 'Executing...';
       try {
-        const res = await fetch('/api/usecommand', {
+        const res = await fetch('/api/useCommand', {
           method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ command, userId }),
+          headers: {'Content-Type': 'application/json'},
+          body: JSON.stringify({ command, userId })
         });
         const data = await res.json();
-        if (res.ok) {
-          resultDiv.textContent = data.message || 'Command executed successfully';
-        } else {
-          resultDiv.textContent = data.error || 'Failed to execute command';
-        }
+        result.textContent = data.message || 'Success';
       } catch {
-        resultDiv.textContent = 'Error sending command.';
+        result.textContent = 'Failed to execute command';
       }
     });
 
-    // Initial fetch and periodic updates every 1 second
+    // Initial fetch
     fetchGeneralInfo();
     fetchCommands();
     fetchLogs();
     populateUseCommands();
-
-    setInterval(fetchGeneralInfo, 1000);  // Refresh general info every 1s
-    setInterval(fetchLogs, 1000);         // Refresh logs every 1s
+    setInterval(() => {
+      fetchGeneralInfo();
+      fetchLogs();
+    }, 60000);
   </script>
 
 </body>
